--- a/docs/fenice.1
+++ b/docs/fenice.1
@@ -1,20 +1,18 @@
-.TH FENICE-1.7 "January 21, 2005"
+.TH Fenice 1 "January 31, 2005" "Fenice Streaming Server" "Open Media Streaming Project"
 .SH NAME
-\fBFenice\fP \- an RTSP/RTP-compliant streaming server
+\fBFenice\fP \- standards-compliant multimedia streaming server
 .SH SYNOPSIS
 .B fenice
 .RI -c " config"
 .SH DESCRIPTION
-This manual page documents briefly the \fBFenice\fP standard streaming server.
+This manual page documents briefly the \fBFenice\fP streaming server.
 .PP
-.\" TeX users may be more comfortable with the \fB<whatever>\fP and
-.\" \fI<whatever>\fP escape sequences to invode bold face and italics, 
-.\" respectively.
-\fBFenice\fP is a streaming server compliant with the IETF's standards for
-real\-time streaming of multimedia contents over Internet. \fBFenice\fP implements
-RTSP \- Real\-Time Streaming Protocol (RFC2326) and RTP/RTCP \- Real\-Time
-Transport Protocol/RTP Control Protcol (RFC3550) supporting the RTP Profile for
-Audio and Video Conferences with Minimal Control (RFC3551).
+\fBFenice\fP is a multimedia streaming server compliant with the IETF's
+standards for real\-time streaming of multimedia contents over Internet.
+\fBFenice\fP implements RTSP \- Real\-Time Streaming Protocol (RFC2326) and
+RTP/RTCP \- Real\-Time Transport Protocol/RTP Control Protocol (RFC3550)
+supporting the RTP Profile for Audio and Video Conferences with Minimal Control
+(RFC3551).
 .br
 \fBFenice\fP supports the following encoding standards:
 .sp 1
