--- a/docs/fenice.1
+++ b/docs/fenice.1
@@ -95,7 +95,7 @@ https://killgates.polito.it/streaming/documentation/fenice
 .SH AUTHORS
 \fBFenice\fP was written by \fBOMSP Team\fP.
 .PP
-This manual page was written by \fBOMSP Team\fP <streaming@multimedia.polito.it>.
+This manual page was written by \fBOMSP Team\fP <team@streaming.polito.it>.
 .PP
 Please check 
 .UH
