--- a/README
+++ b/README
@@ -3,28 +3,32 @@ Sparse notes on A/V Resources management.
 -----------------------------------------
 
 * Default dir for A/V files is /var/fenice/avroot.
-* Default RTSP port is 1554.
+* Default RTSP port is 554.
 
 * For every A/V resource you need
   
-  1) two separate files for audio (MP3) and video (MPEG-1,2),
-  2) a Source Description (.sd) file for resource description.
+  1) Either separate files for audio (MP3) and video (MPEG-1,2), or a
+     libavformat compatible container (mov/mp4 suggested)
+  2) a Source Description (.sd) file for resource description to map the
+     different sources.
   
   Streming clients must be invoked with, e.g:
   	
-	$ mystreamingclient rtsp://streamingserver:1554/myvideo.sd
+	$ mystreamingclient rtsp://streamingserver/myvideo.sd
 
-  or similar. You can't request plain mpeg or mp3 files, neither for audio-only
-  nor video-only resources.  
+  or similar. 
+  You can't request plain files as you would expect from a webserver.
   
   See test files in avroot dir for examples.
 
-* You can do live mp3-coded streaming using a named-pipe:
+* You can do live streaming using a named-pipe:
 
   1) Create a named-pipe (e.g., mkfifo live.mp3),
   2) create an .sd file with the named-pipe as audio content, then
   3) feed named-pipe with live-encoded mp3 data.
 
+  You may use the felix companion tool to ease the live stream management.
+
 * Suggested encoding tools:
-  Video: mjpegtools' mpeg2enc
-  Audio: lame
+  Video: mjpegtools' mpeg2enc, ffmpeg
+  Audio: lame, ffmpeg
