WIP warning added, to be changed later

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+##########
+
+BEWARE: work in progress status, the codebase is being updated
+
+########## Don't expect anything to build right now ##########
+
 -----------------------------------------
 Sparse notes on A/V Resources management.
 -----------------------------------------
