--- a/TODO
+++ b/TODO
@@ -1,10 +1,15 @@
-1.11:
+0.1.13
+	* ipc/rpc systems
+        * more formats support
+
+0.1.12:
+	* fast seek
+	* cross file stream sync (homogeneous files)
+
+0.1.11:
 	* mediathread
 		- mmapped I/O
 		- libavformat support (starting from mov/mp4)
 		- mov2sdp (limited to interesting format)
 	* daemon mode
-1.12:
-	* fast seek
-	* cross file stream sync (homogeneous files)
-	* ipc/rpc systems
+
