--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,11 @@
 Current
+        - Dario Gallucci <dario.gallucci@polito.it>
+        - Luca Barbato <lu_zero@gentoo.org>
+Past
 	- Giampaolo Mancini <giampaolo.mancini@polito.it>
 	- Francesco Varano <francesco.varano@polito.it>
 	- Marco Penno <marco.penno@polito.it>
 	- Federico Ridolfo <federico.ridolfo@polito.it>
-Past
 	- Eugenio Menegatti <m.eu@libero.it>
 	- Stefano Cau
 	- Giuliano Emma
