make config option -f (in line with apache and lighttpd options)

--- a/docs/feng.1
+++ b/docs/feng.1
@@ -3,7 +3,7 @@
 \fBFeng\fP \- multimedia streaming server
 .SH SYNOPSIS
 .B feng
-.RI -c " config"
+.RI -f " config"
 .RI -s
 .RI -v
 .RI -h
@@ -43,7 +43,7 @@ This program follow the usual GNU command line syntax, with long
 options starting with two dashes (`-').
 A summary of options is included below.
 .TP
-.BI "\-c, \-\-config " config
+.BI "\-f, \-\-config " config
 Uses the directives in the file \fIconfig\fP
 on startup. See CONFIGURATION for details.
 .TP
