--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 To do:
     * ipc/rpc systems
     * support more formats (h263, aac, dirac, snow, wavpack, speex)
+    * investigate possible memory leak
 
 Done:
     * rtcp bye
@@ -15,7 +16,7 @@ Done:
 0.1.11:
     * mediathread
 	- mmapped I/O
-        - libavformat support (starting from mov/mp4)
-        - mov2sdp (limited to interesting format)
+        - libavformat support
+        - any2sdp (limited to interesting format)
     * daemon mode
 
