Ready for the release?

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 + Feng changelog
 
-  31 May 2007; Luca Barbato <lu_zero@gentoo.org> :
+  31 May 2007; Luca Barbato <lu_zero@gentoo.org> feng-0.1.13:
   First release
 
