--- a/INSTALL
+++ b/INSTALL
@@ -8,7 +8,8 @@ In order to build feng you need:
 - gnu toolchain (gcc >= 3.4 , make >= 3.80, libtool >= 1.5.20) [1]
 - glib-2 >= 2.10 [2]
 - ffmpeg svn HEAD or any recent snapshot [3].
-- netembryo >= 0.0.1 [4]
+- netembryo >= 0.0.3 [4]
+- bufferpool >= 0.0.1 [4]
 
 
 
@@ -67,7 +68,7 @@ The standard build instruction applies form this step.
 
 [3] http://ffmpeg.org                           -- FFmpeg
 
-[4] git://live.polito.it/var/git/netembryo.git  -- Netembryo git repository
+[4] http://live.polito.it/gitweb                -- LScube git repository
 
 [5] http://git.or.cz                            -- Git Version Control System
 
