--- a/TODO
+++ b/TODO
@@ -4,4 +4,5 @@ To do:
     * update rpm and deb package scripts
     * integrate yaml
     * multicast support
+    * increase the bundled documentation
 
