--- a/INSTALL
+++ b/INSTALL
@@ -10,6 +10,7 @@ In order to build feng you need:
 - ffmpeg svn HEAD or any recent snapshot [3].
 - netembryo >= 0.0.3 [4]
 - bufferpool >= 0.0.1 [4]
+- libgcrypt >= 1.2.0 [5]
 
 
 
@@ -34,19 +35,19 @@ sources.
 In order to use the live sources for our scm you need the following additional
 softwares:
 
-- git >= 1.5 [5]
-- autotools (automake >= 1.9, autoconf >= 2.61) [6]
+- git >= 1.5 [6]
+- autotools (automake >= 1.9, autoconf >= 2.61) [7]
 
 The sources reside at git://live.polito.it/var/git/feng.git you can fetch them
 by issuing 
 
 $ git clone git://live.polito.it/var/git/feng.git
 
-Please refer to the git website[5] and our site[0] for further documentation.
+Please refer to the git website[6] and our site[0] for further documentation.
 
 In order to generate the configure script you may use either autoreconf or the autogen.sh script, the outcome will be the same.
 
-$ autoreconf 
+$ autoreconf -i
 
 or 
 
@@ -70,7 +71,9 @@ The standard build instruction applies form this step.
 
 [4] http://live.polito.it/gitweb                -- LScube git repository
 
-[5] http://git.or.cz                            -- Git Version Control System
+[5] http://www.g10code.com/p-libgcrypt.html     -- libgcrypt website
 
-[6] http://www.gnu.org/software/automake/       -- GNU automake
+[6] http://git.or.cz                            -- Git Version Control System
+
+[7] http://www.gnu.org/software/automake/       -- GNU automake
     http://www.gnu.org/software/autoconf/       -- GNU autoconf
