mpeg ts parser (enabling it)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
+Core team
+
 Current
         - Alessandro Molina     <amol.wrk@gmail.com>
         - Dario Gallucci        <dario.gallucci@polito.it>
@@ -11,3 +13,8 @@ Past
 	- Stefano Cau
 	- Giuliano Emma
 	- Stefano Oldrini
+
+Contributions
+
+mediathread/
+        mpeg2t.c : Austin Foxley    <austinf@cetoncorp.com>
