--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 + Feng changelog
 
+  7 Nov 2007; Luca Barbato <lu_zero@gentoo.org>:
+  New release
+
   16 Oct 2007; Luca Barbato <lu_zero@gentoo.org>:
   Fix a race condition in mediathread and enable again GAsyncQueue
 
