--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 + Feng changelog
 
+  30 Jan 2008; Luca Barbato <lu_zero@gentoo.org>:
+  Instance variable introduction and related refactor
+
   28 Dec 2007; Luca Barbato <lu_zero@gentoo.org> feng-0.1.16:
   Released
 
