--- a/TODO
+++ b/TODO
@@ -2,7 +2,6 @@ To do:
     * ipc/rpc systems
     * support more formats (dirac, snow, wavpack)
     * update rpm and deb package scripts
-    * integrate yaml or integrate lighttpd
     * access permissions
     * increase the bundled documentation
-
+    * support an arbitrary number of listening sockets
