--- a/docs/feng.1
+++ b/docs/feng.1
@@ -48,14 +48,14 @@ The configuration file use the same syntax used by
 .SH SEE ALSO
 \fIOn-line Documentation\fP:
 .UH
-http://live.polito.it/feng
+http://lscube.org/feng
 .SH AUTHORS
 \fBFeng\fP was written by \fBLScube Team\fP.
 .PP
-This manual page was written by \fBLScube Team\fP <team@streaming.polito.it>.
+This manual page was written by \fBLScube Team\fP <team@lscube.org>.
 .PP
 Please check 
 .UH
-http://live.polito.it/team
+http://lscube.org/team
 for further details.
 
