--- a/README
+++ b/README
@@ -65,6 +65,6 @@ Please refer to the man page for further information.
 
 + Bug reports
 
-Please use our bug tracker accessible at https://live.polito.it/roundup/lscube
-using feng as the Topic.
+Please use our bug tracker accessible at http://bugs.lscube.org using feng as
+the Topic.
 
