--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 + Feng changelog
 
+  12 Jun 2009; Luca Barbato <lu_zero@gentoo.org> feng-2.1.0_rc1:
+  Released
+
   03 Apr 2008; Luca Barbato <lu_zero@gentoo.org>:
   Rationalize eventloop
 
