Improved live streaming
- Make sure flux and producer restart won't cause EOF
- Try to do not loop unneededly

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 + Feng changelog
 
+  27 Jul 2009; Luca Barbato <lu_zero@gentoo.org>:
+  Improved live support
+
   12 Jun 2009; Luca Barbato <lu_zero@gentoo.org> feng-2.1.0_rc1:
   Released
 
