News update, we got plugins more or less

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 + Feng changelog
 
+  25 Sep 2009; Luca Barbato <lu_zero@gentoo.org>:
+  Plugin layer
+
   27 Jul 2009; Luca Barbato <lu_zero@gentoo.org>:
   Improved live support
 
