--- a/INSTALL
+++ b/INSTALL
@@ -8,12 +8,11 @@ In order to build feng you need:
 - gnu toolchain (gcc >= 3.4 , make >= 3.80, libtool >= 1.5.20) [1]
 - glib-2 >= 2.10 [2]
 - ffmpeg >= 0.5 [3]
-- netembryo >= 0.1.0 [4]
-- libev >= 3.48 [5]
+- libev >= 3.48 [4]
 
 Optionally we additionally use:
 
-- json-c [6] to provide realtime statistics
+- json-c [5] to provide realtime statistics
 
 + Build instructions
 
@@ -37,8 +36,8 @@ sources.
 In order to use the live sources for our scm you need the following additional
 softwares:
 
-- git >= 1.5 [7]
-- autotools (automake >= 1.9, autoconf >= 2.61) [8]
+- git >= 1.5 [6]
+- autotools (automake >= 1.9, autoconf >= 2.61) [7]
 
 The sources reside at git://lscube.org/feng.git you can fetch them
 by issuing
@@ -58,6 +57,7 @@ The standard build instruction applies form this step.
 + Links
 
 [0] http://lscube.org                           -- LScube main website
+    http://cgit.lscube.org                      -- LScube git repository
 
 [1] http://www.gnu.org/software/gcc/            -- GNU Compiler collection
     http://www.gnu.org/software/libtool/        -- GNU Libtool
@@ -67,13 +67,11 @@ The standard build instruction applies form this step.
 
 [3] http://ffmpeg.org                           -- FFmpeg
 
-[4] http://cgit.lscube.org                      -- LScube git repository
+[4] http://software.schmorp.de/pkg/libev.html   -- Libev
 
-[5] http://software.schmorp.de/pkg/libev.html   -- Libev
+[5] http://oss.metaparadigm.com/json-c/         -- A JSON implementation in C
 
-[6] http://oss.metaparadigm.com/json-c/         -- A JSON implementation in C
+[6] http://git.or.cz                            -- Git Version Control System
 
-[7] http://git.or.cz                            -- Git Version Control System
-
-[8] http://www.gnu.org/software/automake/       -- GNU automake
+[7] http://www.gnu.org/software/automake/       -- GNU automake
     http://www.gnu.org/software/autoconf/       -- GNU autoconf
